site.css
html {
  box-sizing: border-box;
}
*, *:before, *:after {
  box-sizing: inherit;
}

body {
  width: 100%;
  height: 100%;
  overflow: auto;
  background-image:
    linear-gradient(133deg, white, white, #fff6d5);
  font-family:
    Georgia, serif;
  s-font-family:
    -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
}

input {
  font-family: inherit;
}

blinking-dot:after {
  display: inline-block;
  content: '';
  position: relative;
  width: 0.01em;
  height: 0.01em;
  background: black;
  border-radius: 1em;
  transform: scale(10) translate(-0.005em, 0.001em);
  opacity: 0.1;
  transition: transform 400ms, opacity 400ms;
}

#head {
  font-size: 800%;
  padding-left: 0.3em;
  color: white;
  text-shadow:
    -1px -1px #847000,
    -1px 1px #845e00,
    1px -1px #845e00,
    1px 1px #845e00,
    4px 4px 6px rgba(0, 0, 0, 0.2);
}

#container .twitter-tweet {
  margin: 0;
}

#container .twitter-tweet > div {
  max-width: 550px;
  border: solid 1px silver;
  border-radius: 1em;
  padding: 1em;
  padding-top: 0;
}

#container hr {
  margin-bottom: 3em;
  border-left: 9em solid transparent;
  border-right: 9em solid transparent;
  border-top: solid 1px silver;
  border-bottom: none;
}

#container p {
  margin-top: 1.6em;
  margin-bottom: 1.6em;
  line-height: 1.5;
}

#container {
  padding-left: 4em;
  padding-right: 4em;
}

#container h1 {
  text-align: center;
  margin-top: 4em;
  margin-bottom: 2em;
  font-size: 300%;
}

#container h1, #container h2, #container h3 {
  clear: both;
}

